# allo

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
.github/workflows/: doc_gen_pub_gh_pages.yaml  release.yml
docs/: annotated.html  annotated_dup.js  bpool_8hpp.html  bpool_8hpp.js  bpool_8hpp__dep__incl.map  bpool_8hpp__dep__incl.md5  bpool_8hpp__incl.map  bpool_8hpp__incl.md5  bpool_8hpp_source.html  bpool__alloc_8hpp.html  bpool__alloc_8hpp.js  bpool__alloc_8hpp__dep__incl.map  bpool__alloc_8hpp__dep__incl.md5  bpool__alloc_8hpp__incl.map  bpool__alloc_8hpp__incl.md5  bpool__alloc_8hpp_source.html  bpool__alloc__gbenchmark_8cpp.html  bpool__alloc__gbenchmark_8cpp.js  bpool__alloc__gbenchmark_8cpp__incl.map  bpool__alloc__gbenchmark_8cpp__incl.md5  bpool__alloc__gbenchmark_8cpp_source.html  bpool__alloc__gtest_8cpp.html  bpool__alloc__gtest_8cpp.js  bpool__alloc__gtest_8cpp__incl.map  bpool__alloc__gtest_8cpp__incl.md5  bpool__alloc__gtest_8cpp_ac289e30ec13303afc52c14d9df8db78e_cgraph.map  bpool__alloc__gtest_8cpp_ac289e30ec13303afc52c14d9df8db78e_cgraph.md5  bpool__alloc__gtest_8cpp_source.html  bpool__gtest_8cpp.html  bpool__gtest_8cpp.js  bpool__gtest_8cpp__incl.map  bpool__gtest_8cpp__incl.md5  bpool__gtest_8cpp_a46418538e14988323b559b82348746e4_cgraph.map  bpool__gtest_8cpp_aa42554e9dbb0d07a774b5fc81ddd524d_cgraph.md5  bpool__gtest_8cpp_source.html  classes.html  config_8h.html  config_8h_source.html  dir_000000_000009.html  dir_000001_000004.html  (+332 more)
docs/html/: annotated.html  bpool_8hpp.html  bpool_8hpp_source.html  bpool__alloc_8hpp.html  bpool__alloc_8hpp_source.html  bpool__alloc__gbenchmark_8cpp.html  bpool__alloc__gtest_8cpp.html  bpool__gtest_8cpp.html  classes.html  config_8h.html  config_8h_source.html  dir_0623da0befcaef9bf33d5cada14fe376.html  dir_2e53991d0abfe4d26476f40debcf47e2.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_4b9d01165433dba703e06bc6af058de1.html  dir_55243687adda8a5165b7d7e63c20f3e3.html  dir_5a39514f9f31a40f7d76cd75ab81b250.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a31b2397dc4c9d870dd3b4cb40afb8c.html  dir_7d3730c0e184c233f92515fc7143aa77.html  dir_e307ad8ef99ef159cd3a817b3316e956.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  index.html  logging_8hpp.html  logging_8hpp_source.html  logs__init_8hpp.html  logs__init_8hpp_source.html  main_8cpp.html  memuse_8hpp.html  memuse_8hpp_source.html  (+43 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  defines_0.js  defines_2.js  defines_3.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  files_6.js  functions_0.js  functions_1.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  namespaces_0.js  namespaces_2.js  searchdata.js  typedefs_0.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_2.js  (+3 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  defines_1.js  defines_4.js  enums_0.js  enumvalues_0.js  files_4.js  files_5.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_d.js  functions_e.js  namespaces_0.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_5.js  typedefs_7.js  typedefs_8.js  (+12 more)
src/: main.cpp
src/alloc/: bpool.hpp  bpool_alloc.hpp  bpool_alloc_gbenchmark.cpp  bpool_alloc_gtest.cpp  bpool_gtest.cpp  memuse.hpp
src/args/: options.hpp
src/cont/: slist.hpp  slist_gtest.cpp
src/info/: CMakeLists.txt
src/info/include/info/: version.h
src/info/src/: version.cpp
src/utils/: logging.hpp  logs_init.hpp  trace.hpp
